# ai-job-finder

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  MEMORY.md  PLAN.md  PRD.md  PR_NOTE.md  README.md  ai-job-finder-setup.sh  alembic.ini  goal-autonomous-upgrade.md  pyproject.toml  requirements.txt
.github/workflows/: auto-label-pr.yml  ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_job_posting_constraints.py  003_add_user_profiles.py
config/: scraper_selectors.json  settings.py
data/: skills_taxonomy.json
docs/: api.md  architecture.md  guide.md
src/: __init__.py  company_research.py  daemon.py  database.py  main.py  optimization.py  reporter.py  tailoring.py
src/auto_applier/: __init__.py  applier.py  detector.py
src/cv_processor/: improver.py  improver.py.bak  parser.py  scorer.py
src/job_scraper/: __init__.py  base.py  engine.py  glassdoor.py  indeed.py  linkedin.py
src/matcher/: __init__.py  engine.py
src/notification/: __init__.py  console_notifier.py  email_notifier.py
src/utils/: __init__.py  cache.py  exceptions.py  exporter.py  logging.py  models.py  skills.py  validators.py
tests/: conftest.py  test_cache.py  test_exceptions.py  test_exporter.py  test_improver.py  test_integration.py  test_logging.py  test_models.py  test_parser.py  test_scorer.py  test_skills.py  test_validators.py
