[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-finder"
version = "0.3.0"
description = "AI-powered career agent CLI — parse CVs, find matching jobs, and auto-apply"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JobFinder Contributors"}
]
keywords = ["job-search", "cv-parser", "ai", "automation", "career"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "python-dotenv>=1.1.0",
    "pydantic>=2.10.0",
    "python-docx>=1.1.2",
    "PyPDF2>=3.0.1",
    "spacy>=3.8.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "sentence-transformers>=3.3.0",
    "playwright>=1.49.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "rich>=13.9.0",
    "click>=8.1.7",
    "fpdf2>=2.7.0",
    "numpy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
ai-job-finder = "src.main:cli"

[project.urls]
Homepage = "https://github.com/user/ai-job-finder"
Repository = "https://github.com/user/ai-job-finder"
Documentation = "https://github.com/user/ai-job-finder/docs"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.setuptools.package-data]
"config" = ["scraper_selectors.json"]
"data" = ["skills_taxonomy.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    alembic/versions
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "config"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "RUF",
]
ignore = [
    "E501",
    "N806",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
    "alembic/versions",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "network: marks tests that require network access",
    "slow: marks tests that take a long time",
]
